# MicBridge

./: README.md  index.html
wasapi-asio-bridge/: CMakeLists.txt  Driver  build.bat  install.bat
wasapi-asio-bridge/include/: AsioOutput.h  AudioEngine.h  AudioFormat.h  Common.h  DeviceEnumerator.h  LevelMeter.h  Logger.h  MainWindow.h  Resampler.h  RingBuffer.h  WasapiCapture.h
wasapi-asio-bridge/output/: README.md
wasapi-asio-bridge/resources/: resources.rc
wasapi-asio-bridge/src/: AsioOutput.cpp  AudioEngine.cpp  DeviceEnumerator.cpp  LevelMeter.cpp  Logger.cpp  MainWindow.cpp  Resampler.cpp  RingBuffer.cpp  WasapiCapture.cpp  main_cli.cpp  main_gui.cpp
